jamalyzer-client/styles/home/HeroSection.module.css
.hero-section {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  gap: 4rem;
  flex: 1;

  height: 55rem;
  margin-top: 8rem;
  margin-bottom: 22rem;

  color: white;
  text-align: center;
}

.hero-section h1 {
  font-size: 48px;
  font-weight: 900;

  margin: 0;
}

.hero-section p {
  margin: 0;
}

.hero-banner,
.drop-shadow {
  position: absolute;
  top: 3rem;
  left: 50%;
  transform: translateX(-50%);

  width: 100vw;
  max-width: 150rem;
  height: 60rem;
}

.hero-banner {
  z-index: -4;

  object-fit: cover;
  object-position: 50% 0;
}

.drop-shadow {
  z-index: -3;

  background: var(--hero-gradient);
}

